full-stack-asset-transfer-guide/infrastructure/sample-network/scripts/test_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: test
  namespace: test
  labels:
    app: test
  annotations:
    reloader.stakater.com/auto: "true"
    secret.reloader.stakater.com/reload: "test-secret"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
      namespace: test
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: test-config
        - name: secret-volume
          secret:
            secretName: test-secret
      hostAliases:
      - ip: "192.168.31.55"
        hostnames:
        - "host.local"
      containers:
        - name: test
          image: nicolaka/netshoot
          command: ["sleep", "3600"]
          volumeMounts:
            - name: config-volume
              mountPath: "/etc/config"
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/secret-volume"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: test-init
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-init
  template:
    metadata:
      labels:
        app: test-init
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: test-secret
        - name: shared-config
          emptyDir: {}
      containers:
        - name: main-app
          image: nicolaka/netshoot
          command: ["sleep", "3600"]
          volumeMounts:
            - name: shared-config
              mountPath: "/etc/app-config"
