full-stack-asset-transfer-guide/infrastructure/sample-network/scripts/rest_api_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rest-api
  labels:
    app: rest-api
  annotations:
    reloader.stakater.com/auto: "true"
    secret.reloader.stakater.com/reload: "my-secret"    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: my-secret
      containers:
        - name: rest-api
          image: localhost:5000/rest-api:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/secret-volume"
---
kind: Service
apiVersion: v1
metadata:
  name: rest-api
spec:
  selector:
    app: rest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api.ambs.telesoho.com
spec:
  rules:
  - host: api.ambs.telesoho.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-api
            port:
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  # labels:
  #   app: rest-api
  #   app.kubernetes.io/instance: fabricpeer
  #   app.kubernetes.io/managed-by: fabric-operator
  #   app.kubernetes.io/name: fabric
  #   creator: fabric
  #   orgname: Org1MSP
spec:
  ingressClassName: nginx
  rules:
    - host: restapi.localho.st
      http:
        paths:
          - backend:
              service:
                name: rest-api
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - restapi.localho.st
